Fixed addSection visibility issues

--- a/styles/Editor.less
+++ b/styles/Editor.less
@@ -234,7 +234,8 @@ html {
           z-index: 200;
           opacity: 0;
           p {
-            width: fit-content;
+            display: block;
+            width: fit-content !important;
             background-color: var(--mainLight);
             color: var(--mainDark);
             font-weight: 800;
